Issues-318: Added API to get\patch a group member
